v0.4.2
-------------------

* Add support for an `interactive` attribute on all DisplayObjects which allows
  pointer-events to be received (true) or to pass through (false)
* Setting an attribute to the actual value won't trigger a render message.
* Added support for getAbsoluteBoundingBox and getAbsoluteMatrix on
  DisplayObject
* Added an destroy event for DisplayObjects, which is fired on a displayobject when
  destroy is called on it.
* Updated KeyframeAnimation.js documentation
* Fixed an issue with KeyframeAnimation where it would trip over certain undefined values
* Fixed a bug in KeyframeAnimation#_fillInProperties where it would refer to the wrong
  instance property easingFn (-> easing)
* Sending of user messages to runner contexts is deferred until context startup
* Allow for an ID string to be passed to as the first argument to `run`
* Fix a memory leak with frame rate logging
* Fix matrix attribute setter to update scale values correctly

v0.4.1 / 2012-10-26
-------------------

* Add optional category to sendMessage() to allow for more specific message
  passing
* Add isRight/isMiddle/isLeft to Pointer events and make it possible to
  disable/enable the context menu from the `bonsai.run` configuration object.
* Introduce MediaDisplayObject that combines the basic functionality of
  Video and Audio.
* Fixed examples to be in line with the documentation.
* Fix out-of-range hsl color values
* Fix out-of-range alpha values when parsing rgba() strings
* Add additional method signature for new Matrix([a, b, c, d, tx, ty])
* Add Matrix.fromString() method to create new Matrix instance from a string.
* Rename DisplayObject#getComputed to DisplayObject#getBoundingBox and improve
  implementation for calculating the bounding box of paths
* Make the example movie list (previously movie_list.js) a proper JSON file

v0.4.0 / 2012-10-03
-------------------

* Provide a unified `bonsai.js` build for iframe/worker context instead